--- a/home.html
+++ b/home.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>Inicio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    dsfdfa
+  <header>
+    <nav>
+      <a href="home.html">Inicio</a>
+      <a href="index.html">ODS</a>
+      <a href="tema.html">Detalles</a>
+      <a href="contacto.html">Contacto</a>
+      <a href="cv.html">CV</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Bienvenido a nuestro sitio sobre los ODS</h1>
+    <p>Explora los Objetivos de Desarrollo Sostenible y cómo podemos construir juntos un mejor futuro.</p>
+    <button onclick="window.location.href='index.html'">Entrar</button>
+  </main>
 </body>
 </html>
