--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>ODS - Introducción</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+  <header>
+    <nav>
+      <a href="home.html">Inicio</a>
+      <a href="index.html">ODS</a>
+      <a href="tema.html">Detalles</a>
+      <a href="contacto.html">Contacto</a>
+      <a href="cv.html">CV</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Objetivos de Desarrollo Sostenible</h1>
+    <p>Los ODS son un conjunto de 17 objetivos establecidos por la ONU para abordar desafíos globales como la pobreza, el cambio climático, la igualdad de género, entre otros. Su meta es construir un futuro sostenible y justo para todos.</p>
+    <img src="img/ods_general.jpg" alt="Ilustración general de los ODS">
+  </main>
 </body>
 </html>
