Cambios y más cambios

--- a/cv.html
+++ b/cv.html
@@ -15,26 +15,27 @@
       <a href="cv.html">CV</a>
     </nav>
   </header>
+
   <main>
     <h1>Currículum Vitae</h1>
     
     <section>
       <h2>Datos personales</h2>
-      <p><strong>Nombre:</strong> Juan Pérez</p>
-      <p><strong>Email:</strong> juanperez@email.com</p>
+      <p><strong>Nombre:</strong> Ramón Dalai Casillas Sánchez</p>
+      <p><strong>Email:</strong> blablabla@email.com</p>
     </section>
 
     <section>
       <h2>Formación académica</h2>
       <ul>
-        <li>Licenciatura en Ingeniería Informática - Universidad Nacional</li>
+        <li>Licenciatura en Ingeniería de Software - Universidad de Colima</li>
       </ul>
     </section>
 
     <section>
       <h2>Experiencia laboral</h2>
       <ul>
-        <li>Desarrollador Web - Empresa X (2022 - Actualidad)</li>
+        <li>Desarrollador Web - </li>
       </ul>
     </section>
 
