--- a/tema.html
+++ b/tema.html
@@ -15,43 +15,93 @@
       <a href="cv.html">CV</a>
     </nav>
   </header>
+
   <main>
     <h1>Detalles de los ODS</h1>
     <div class="ods-item">
       <p><strong>ODS 1 - Fin de la pobreza:</strong> Erradicar la pobreza extrema para todas las personas en todo el mundo para 2030 es un objetivo fundamental de la Agenda 2030 para el desarrollo sostenible.</p>
-      <img src="img/ods1.png" alt="Logo ODS 1">
+      <img src="odsicons/S-WEB-Goal-01.png" alt="Logo ODS 1">
     </div>
 
     <div class="ods-item">
       <p><strong>ODS 2 - Hambre Cero:</strong> El objetivo 2 es crear un mundo libre de hambre para 2030. El problema global del hambre y la inseguridad alimentaria ha mostrado un aumento alarmante desde 2015, una tendencia exacerbada por una combinación de factores que incluyen la pandemia, los conflictos, el cambio climático y la profundización de las desigualdades.</p>
-      <img src="img/ods2.png" alt="Logo ODS 2">
+      <img src="odsicons/S-WEB-Goal-02.png" alt="Logo ODS 2">
     </div>
 
     <div class="ods-item">
       <p><strong>ODS 3 - Salud y Bienestar:</strong> La cobertura sanitaria universal tiene como objetivo garantizar que todas las personas puedan acceder a servicios de salud de calidad sin afrontar dificultades financieras. Garantizar una vida saludable para todos requiere un fuerte compromiso, pero los beneficios superan los costes. Las personas sanas son la base de unas economías sanas. </p>
-      <img src="img/ods3.png" alt="Logo ODS 3">
+      <img src="odsicons/S-WEB-Goal-03.png" alt="Logo ODS 3">
     </div>
 
     <div class="ods-item">
       <p><strong>ODS 4 - Educación de Calidad:</strong> La educación es un derecho humano fundamental y esencial para el desarrollo sostenible. El ODS 4 busca garantizar una educación inclusiva, equitativa y de calidad, promoviendo oportunidades de aprendizaje durante toda la vida para todos.</p>
-      <img src="img/ods4.png" alt="Logo ODS 4">
+      <img src="odsicons/S-WEB-Goal-04.png" alt="Logo ODS 4">
     </div>
 
     <div class="ods-item">
       <p><strong>ODS 5 - Igualdad de Género:</strong> La igualdad de género es un derecho humano fundamental y una base esencial para un mundo pacífico, próspero y sostenible. El ODS 5 busca poner fin a todas las formas de discriminación y violencia contra mujeres y niñas, garantizando su plena participación en la vida política, económica y pública.</p>
-      <img src="img/ods5.png" alt="Logo ODS 5">
+      <img src="odsicons/S-WEB-Goal-05.png" alt="Logo ODS 5">
     </div>
 
     <div class="ods-item">
       <p><strong>ODS 6 - Agua Limpia y Saneamiento:</strong> El agua es un recurso vital para la vida y el desarrollo sostenible. El ODS 6 busca garantizar la disponibilidad y gestión sostenible del agua y el saneamiento para todos, promoviendo el acceso equitativo a estos recursos esenciales.</p>
-      <img src="img/ods6.png" alt="Logo ODS 6">
+      <img src="odsicons/S-WEB-Goal-06.png" alt="Logo ODS 6">
     </div>
 
     <div class="ods-item">
       <p><strong>ODS 7 - Energía Asequible y No Contaminante:</strong> El acceso a energía asequible, fiable, sostenible y moderna es esencial para el desarrollo económico y social. El ODS 7 busca garantizar el acceso universal a la energía, aumentar la proporción de energías renovables y mejorar la eficiencia energética.</p>
-      <img src="img/ods7.png" alt="Logo ODS 7">
+      <img src="odsicons/S-WEB-Goal-07.png" alt="Logo ODS 7">
     </div>
 
+    <div class="ods-item">
+      <p><strong>ODS 8 - Trabajo Decente y Crecimiento Económico:</strong> El ODS 8 busca promover el crecimiento económico sostenido, inclusivo y sostenible, el empleo pleno y productivo y el trabajo decente para todos. Se enfoca en fomentar políticas que apoyen la creación de empleo, la innovación y el desarrollo empresarial.</p>
+      <img src="odsicons/S-WEB-Goal-08.png" alt="Logo ODS 8">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 9 - Industria, Innovación e Infraestructura:</strong> El ODS 9 busca construir infraestructuras resilientes, promover la industrialización inclusiva y sostenible y fomentar la innovación. Se enfoca en el desarrollo de infraestructuras sostenibles que impulsen el crecimiento económico y mejoren la calidad de vida.</p>
+      <img src="odsicons/S-WEB-Goal-09.png" alt="Logo ODS 9">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 10 - Reducción de las Desigualdades:</strong> El ODS 10 busca reducir la desigualdad en y entre los países, promoviendo políticas que aseguren la inclusión social, económica y política de todas las personas, independientemente de su origen, género o condición.</p>
+      <img src="odsicons/S-WEB-Goal-10.png" alt="Logo ODS 10">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 11 - Ciudades y Comunidades Sostenibles:</strong> El ODS 11 busca hacer que las ciudades y los asentamientos humanos sean inclusivos, seguros, resilientes y sostenibles. Se enfoca en mejorar la planificación urbana, el transporte público y la gestión de residuos para crear entornos urbanos más habitables.</p>
+      <img src="odsicons/S-WEB-Goal-11.png" alt="Logo ODS 11">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 12 - Producción y Consumo Responsables:</strong> El ODS 12 busca garantizar modalidades de consumo y producción sostenibles, promoviendo la eficiencia de los recursos, la reducción de residuos y el fomento de prácticas sostenibles en todos los sectores.</p>
+      <img src="odsicons/S-WEB-Goal-12.png" alt="Logo ODS 12">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 13 - Acción por el Clima:</strong> El ODS 13 busca mejorar la educación, la concienciación y la capacidad humana e institucional sobre la mitigación del cambio climático, la adaptación, la reducción de sus efectos y la alerta temprana.</p>
+      <img src="odsicons/S-WEB-Goal-13.png" alt="Logo ODS 13">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 14 - Vida Submarina:</strong> El ODS 14 busca conservar y utilizar sosteniblemente los océanos, los mares y los recursos marinos para el desarrollo sostenible. Se enfoca en la protección de los ecosistemas marinos y la reducción de la contaminación marina.</p>
+      <img src="odsicons/S-WEB-Goal-14.png" alt="Logo ODS 14">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 15 - Vida de Ecosistemas Terrestres:</strong> El ODS 15 busca proteger, restaurar y promover el uso sostenible de los ecosistemas terrestres, gestionar de manera sostenible los bosques, combatir la desertificación y detener la pérdida de biodiversidad.</p>
+      <img src="odsicons/S-WEB-Goal-15.png" alt="Logo ODS 15">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 16 - Paz, Justicia e Instituciones Sólidas:</strong> El ODS 16 busca promover sociedades pacíficas e inclusivas para el desarrollo sostenible, proporcionar acceso a la justicia para todos y construir instituciones eficaces, responsables e inclusivas a todos los niveles.</p>
+      <img src="odsicons/S-WEB-Goal-16.png" alt="Logo ODS 16">
+    </div>
+
+    <div class="ods-item">
+      <p><strong>ODS 17 - Alianzas para Lograr los Objetivos:</strong> El ODS 17 busca fortalecer los medios de implementación y revitalizar la Alianza Mundial para el Desarrollo Sostenible, promoviendo asociaciones entre gobiernos, sector privado y sociedad civil para alcanzar los ODS.</p>
+      <img src="odsicons/S-WEB-Goal-17.png" alt="Logo ODS 17">
+    </div>
   </main>
 </body>
 </html>
