Cambios en imgs

--- a/tema.html
+++ b/tema.html
@@ -23,7 +23,7 @@
       <img src="odsicons/S-WEB-Goal-01.png" alt="Logo ODS 1">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 2 - Hambre Cero:</strong> El objetivo 2 es crear un mundo libre de hambre para 2030. El problema global del hambre y la inseguridad alimentaria ha mostrado un aumento alarmante desde 2015, una tendencia exacerbada por una combinación de factores que incluyen la pandemia, los conflictos, el cambio climático y la profundización de las desigualdades.</p>
       <img src="odsicons/S-WEB-Goal-02.png" alt="Logo ODS 2">
     </div>
@@ -33,7 +33,7 @@
       <img src="odsicons/S-WEB-Goal-03.png" alt="Logo ODS 3">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 4 - Educación de Calidad:</strong> La educación es un derecho humano fundamental y esencial para el desarrollo sostenible. El ODS 4 busca garantizar una educación inclusiva, equitativa y de calidad, promoviendo oportunidades de aprendizaje durante toda la vida para todos.</p>
       <img src="odsicons/S-WEB-Goal-04.png" alt="Logo ODS 4">
     </div>
@@ -43,7 +43,7 @@
       <img src="odsicons/S-WEB-Goal-05.png" alt="Logo ODS 5">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 6 - Agua Limpia y Saneamiento:</strong> El agua es un recurso vital para la vida y el desarrollo sostenible. El ODS 6 busca garantizar la disponibilidad y gestión sostenible del agua y el saneamiento para todos, promoviendo el acceso equitativo a estos recursos esenciales.</p>
       <img src="odsicons/S-WEB-Goal-06.png" alt="Logo ODS 6">
     </div>
@@ -53,7 +53,7 @@
       <img src="odsicons/S-WEB-Goal-07.png" alt="Logo ODS 7">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 8 - Trabajo Decente y Crecimiento Económico:</strong> El ODS 8 busca promover el crecimiento económico sostenido, inclusivo y sostenible, el empleo pleno y productivo y el trabajo decente para todos. Se enfoca en fomentar políticas que apoyen la creación de empleo, la innovación y el desarrollo empresarial.</p>
       <img src="odsicons/S-WEB-Goal-08.png" alt="Logo ODS 8">
     </div>
@@ -63,7 +63,7 @@
       <img src="odsicons/S-WEB-Goal-09.png" alt="Logo ODS 9">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 10 - Reducción de las Desigualdades:</strong> El ODS 10 busca reducir la desigualdad en y entre los países, promoviendo políticas que aseguren la inclusión social, económica y política de todas las personas, independientemente de su origen, género o condición.</p>
       <img src="odsicons/S-WEB-Goal-10.png" alt="Logo ODS 10">
     </div>
@@ -73,7 +73,7 @@
       <img src="odsicons/S-WEB-Goal-11.png" alt="Logo ODS 11">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 12 - Producción y Consumo Responsables:</strong> El ODS 12 busca garantizar modalidades de consumo y producción sostenibles, promoviendo la eficiencia de los recursos, la reducción de residuos y el fomento de prácticas sostenibles en todos los sectores.</p>
       <img src="odsicons/S-WEB-Goal-12.png" alt="Logo ODS 12">
     </div>
@@ -83,7 +83,7 @@
       <img src="odsicons/S-WEB-Goal-13.png" alt="Logo ODS 13">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 14 - Vida Submarina:</strong> El ODS 14 busca conservar y utilizar sosteniblemente los océanos, los mares y los recursos marinos para el desarrollo sostenible. Se enfoca en la protección de los ecosistemas marinos y la reducción de la contaminación marina.</p>
       <img src="odsicons/S-WEB-Goal-14.png" alt="Logo ODS 14">
     </div>
@@ -93,7 +93,7 @@
       <img src="odsicons/S-WEB-Goal-15.png" alt="Logo ODS 15">
     </div>
 
-    <div class="ods-item">
+    <div class="ods-item reverse">
       <p><strong>ODS 16 - Paz, Justicia e Instituciones Sólidas:</strong> El ODS 16 busca promover sociedades pacíficas e inclusivas para el desarrollo sostenible, proporcionar acceso a la justicia para todos y construir instituciones eficaces, responsables e inclusivas a todos los niveles.</p>
       <img src="odsicons/S-WEB-Goal-16.png" alt="Logo ODS 16">
     </div>
