--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
   <main>
     <h1>Objetivos de Desarrollo Sostenible</h1>
     <p>Los ODS son un conjunto de 17 objetivos establecidos por la ONU para abordar desafíos globales como la pobreza, el cambio climático, la igualdad de género, entre otros. Su meta es construir un futuro sostenible y justo para todos.</p>
-    <img src="img/ods_general.jpg" alt="Ilustración general de los ODS">
-    <!--GIF sobre los ODS-->
     <div class="gif-container">
-      <img src="img/ods_gif.gif" alt="GIF sobre los ODS">
+      <div class="tenor-gif-embed" data-postid="14030447" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/ods-gif-14030447">Ods GIF</a>from <a href="https://tenor.com/search/ods-gifs">Ods GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     </div>
     <p>Estos objetivos son una llamada universal a la acción para erradicar la pobreza, proteger el planeta y garantizar la paz y la prosperidad para todos. Cada uno de los 17 ODS tiene metas específicas que deben alcanzarse antes de 2030.</p>
 </main>
