--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>ODS - Introducción</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=settings_accessibility" />
 </head>
 <body>
   <header>
@@ -14,6 +15,19 @@
       <a href="contacto.html">Contacto</a>
       <a href="cv.html">CV</a>
     </nav>
+    <div class="accessibility-wrapper">
+        <button id="accessibilityToggle" aria-label="Opciones de accesibilidad"><span class="material-symbols-outlined"> settings_accessibility</span></button>
+        <div id="accessibilityPanel" class="hidden" aria-hidden="true">
+            <button onclick="adjustFontSize(1)">Aumentar fuente</button>
+            <button onclick="adjustFontSize(-1)">Disminuir fuente</button>
+            <button onclick="toggleDarkMode()">Modo oscuro</button>
+            <button onclick="toggleHighContrast()">Alto contraste</button>
+            <button onclick="toggleImages()">Quitar imágenes</button>
+            <button onclick="toggleLinkHighlight()">Resaltar enlaces</button>
+            <button onclick="toggleColorBlindMode()">Daltonismo</button>
+            <button onclick="resetAccessibility()">Restablecer</button>
+        </div>
+    </div>
   </header>
   
   <main>
@@ -22,7 +36,8 @@
     <div class="gif-container">
       <div class="tenor-gif-embed" data-postid="14030447" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/ods-gif-14030447">Ods GIF</a>from <a href="https://tenor.com/search/ods-gifs">Ods GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     </div>
-    <p>Estos objetivos son una llamada universal a la acción para erradicar la pobreza, proteger el planeta y garantizar la paz y la prosperidad para todos. Cada uno de los 17 ODS tiene metas específicas que deben alcanzarse antes de 2030.</p>
+    <p>Estos objetivos son una llamada universal a la acción para erradicar la pobreza, proteger el planeta y garantizar la paz y la prosperidad para todos. Cada uno de los 17 ODS tiene metas específicas que deben alcanzarse antes de 2030. <a href="tema.html">Detalles de los ODS.</a></p>
 </main>
+<script src="accessibility.js"></script>
 </body>
 </html>
