--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,17 @@
   <title>Contacto</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=settings_accessibility" />
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function(){
+        emailjs.init({
+            publicKey: "hIqHkYZF4mkH1WrBl",
+        });
+    })();
+  </script>
+  <script src="email.js"></script>
 </head>
 <body>
   <header>
@@ -39,10 +50,13 @@
       <label for="email">Correo electrónico:</label>
       <input type="email" id="email" name="email" required>
 
+      <label for="message">Mensaje:</label>
+      <input type="text" id="message" name="message" required>
+
       <label for="captcha">¿Cuánto es 3 + 4?</label>
       <input type="text" id="captcha" name="captcha" required>
 
-      <button type="submit">Enviar</button>
+      <button type="submit" onclick="sendEmail()">Enviar</button>
     </form>
   </main>
 
