--- a/cv.html
+++ b/cv.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <nav>
-      <a href="home.html">Inicio</a>
-      <a href="index.html">ODS</a>
+      <a href="index.html">Inicio</a>
+      <a href="home.html">ODS</a>
       <a href="tema.html">Detalles</a>
       <a href="contacto.html">Contacto</a>
       <a href="cv.html">CV</a>
