--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>ODS - Introducción</title>
+  <title>Inicio</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=settings_accessibility" />
 </head>
 <body>
   <header>
     <nav>
-      <a href="home.html">Inicio</a>
-      <a href="index.html">ODS</a>
+      <a href="index.html">Inicio</a>
+      <a href="home.html">ODS</a>
       <a href="tema.html">Detalles</a>
       <a href="contacto.html">Contacto</a>
       <a href="cv.html">CV</a>
@@ -31,13 +31,10 @@
   </header>
   
   <main>
-    <h1>Objetivos de Desarrollo Sostenible</h1>
-    <p>Los ODS son un conjunto de 17 objetivos establecidos por la ONU para abordar desafíos globales como la pobreza, el cambio climático, la igualdad de género, entre otros. Su meta es construir un futuro sostenible y justo para todos.</p>
-    <div class="gif-container">
-      <div class="tenor-gif-embed" data-postid="14030447" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/ods-gif-14030447">Ods GIF</a>from <a href="https://tenor.com/search/ods-gifs">Ods GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    </div>
-    <p>Estos objetivos son una llamada universal a la acción para erradicar la pobreza, proteger el planeta y garantizar la paz y la prosperidad para todos. Cada uno de los 17 ODS tiene metas específicas que deben alcanzarse antes de 2030. <a href="tema.html">Detalles de los ODS.</a></p>
-</main>
-<script src="accessibility.js"></script>
+    <h1>Bienvenido a nuestro sitio sobre los ODS</h1>
+    <p>Explora los Objetivos de Desarrollo Sostenible y cómo podemos construir juntos un mejor futuro.</p>
+    <button onclick="window.location.href='index.html'">Entrar</button>
+  </main>
+  <script src="accessibility.js"></script>
 </body>
 </html>
