--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
       <label for="captcha">¿Cuánto es 11 + 10?</label>
       <input type="text" id="captcha" name="captcha" required>
 
-      <button type="submit" onclick="sendEmail()">Enviar</button>
+      <button type="submit" >Enviar</button>
     </form>
   </main>
 
@@ -65,7 +65,7 @@
     document.getElementById('contactForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const captcha = document.getElementById('captcha').value.trim();
-      if (captcha === '7') {
+      if (captcha === '21') {
         alert('Formulario enviado correctamente.');
       } else {
         alert('Verificación fallida. Intenta de nuevo.');
