--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main>
     <h1>Bienvenido a nuestro sitio sobre los ODS</h1>
     <p>Explora los Objetivos de Desarrollo Sostenible y cómo podemos construir juntos un mejor futuro.</p>
-    <button onclick="window.location.href='index.html'">Entrar</button>
+    <button onclick="window.location.href='home.html'">Entrar</button>
   </main>
   <script src="accessibility.js"></script>
 </body>
